<resources>
    <string name="level1">level 1</string>
    <string name="level2">level 2</string>
    <string name="level3">level 3</string>
    <string name="level4">level 4</string>
    <string name="app_name">QuizApp</string>
    <string name="Send">Send</string>
    <string name="p11">What is the capital of Spain?</string>
    <string name="p12">What is the capital of France?</string>
    <string name="p13">What is the capital of Portugal?</string>
    <string name="p14">What is the capital of Brasil?</string>
    <string name="p15">What is the capital of EEUU?</string>
    <string name="p16">What is the capital of England?</string>
    <string name="p17">What is the capital of China?</string>
    <string name="p21">What is the capital of Ireland?</string>
    <string name="p22">What is the capital of South-Korea?</string>
    <string name="p23">What is the capital of Mexico?</string>
    <string name="p24">What is the capital of Italy?</string>
    <string name="madrid">Madrid</string>
    <string name="dublin">Dublin</string>
    <string name="malaga">Malaga</string>
    <string name="Munich">Munich</string>
    <string name="Paris">Paris</string>
    <string name="Lisboa">Lisboa</string>
    <string name="Brasilia">Brasilia</string>
    <string name="Washington">Washington</string>
    <string name="London">London</string>
    <string name="Peking">Peking</string>
    <string name="Ottawa">Ottawa</string>
    <string name="Lima">Lima</string>
    <string name="Seoul">Seoul</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Noruega">Norway</string>
    <string name="Mali">Mali</string>
    <string name="Cuba">Cuba</string>
    <string name="Acra">Acra</string>
    <string name="Morocco">Morocco</string>
    <string name="Oslo">Oslo</string>
    <string name="Mexico">Mexico DF</string>
    <string name="Rome">Rome</string>
    <string name="HongKong">Hong-Kong</string>
    <string name="Barcelona">Barcelona</string>
    <string name="Sidney">Sidney</string>
    <string name="puntuacion">Your score is </string>
</resources>
