<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.quizapp.Nivel1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#B2DFDB"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p11"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/Pregunta1"
                    />
                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/GrupoRadio1"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/unouno"
                        android:text="@string/dublin"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/unodos"
                        android:text="@string/malaga"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/unotres"
                        android:text="@string/madrid"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/unocuatro"
                        android:text="@string/Munich"
                        android:layout_margin="6dp"
                        />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#80CBC4"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p12"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/Pregunta2"
                    />
                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/GrupoRadio2"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dosuno"
                        android:text="@string/dublin"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dosdos"
                        android:text="@string/malaga"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dostres"
                        android:text="@string/madrid"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/doscuatro"
                        android:text="@string/Paris"
                        android:layout_margin="6dp"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4DB6AC"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p13"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/Pregunta3"
                    />
                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/GrupoRadio3"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tresuno"
                        android:text="@string/Lisboa"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tresdos"
                        android:text="@string/Mexico"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/trestres"
                        android:text="@string/Morocco"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/trescuatro"
                        android:text="@string/Seul"
                        android:layout_margin="6dp"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#26A69A"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p14"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/Pregunta4"
                    />
                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/GrupoRadio4"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cuatrouno"
                        android:text="@string/Oslo"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cuatrodos"
                        android:text="@string/Bangladesh"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cuatrotres"
                        android:text="@string/Munich"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cuatrocuatro"
                        android:text="@string/Brasilia"
                        android:layout_margin="6dp"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p15"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/Pregunta5"
                    />
                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/GrupoRadio5"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cincouno"
                        android:text="@string/Washington"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cincodos"
                        android:text="@string/Brasilia"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cincotres"
                        android:text="@string/Munich"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cincocuatro"
                        android:text="@string/Oslo"
                        android:layout_margin="6dp"
                        />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00897B"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p16"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/Pregunta6"
                    />
                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/GrupoRadio6"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/seisuno"
                        android:text="@string/Ottawa"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/seisdos"
                        android:text="@string/HongKong"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/seistres"
                        android:text="@string/London"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/seiscuatro"
                        android:text="@string/Paris"
                        android:layout_margin="6dp"
                        />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00796B"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p17"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:id="@+id/Pregunta7"
                    />
                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/GrupoRadio7"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sieteuno"
                        android:text="@string/dublin"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sietedos"
                        android:text="@string/Peking"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sietetres"
                        android:text="@string/Oslo"
                        android:layout_margin="6dp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sietecuatro"
                        android:text="@string/Ottawa"
                        android:layout_margin="6dp"
                        />
                </RadioGroup>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Send"
                android:onClick="onClick"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
