<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.android.quizapp.MainActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardElevation="8dp"
            android:onClick="onClick1"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level1"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="45dp"
                    android:layout_gravity="center"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            android:onClick="onClick2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level2"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@android:color/white"

                android:textSize="45dp"
                android:layout_gravity="center"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            android:onClick="onClick3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level3"
                android:textAllCaps="true"
                android:gravity="center"
                android:textColor="@android:color/white"

                android:textSize="45dp"
                android:layout_gravity="center"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorAccent"
            android:layout_margin="8dp"
            app:cardElevation="8dp"
            android:onClick="onClick4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level4"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="45dp"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
